--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,9 @@
 streamlit
-python-dotenv
 pandas
 numpy
 joblib
-openai
+transformers
 torch
 accelerate
 scikit-learn
-transformers==4.36.1
-plotly==5.18.1
+plotly
